--- a/android/app/src/main/res/xml/nfc_tech_filter.xml
+++ b/android/app/src/main/res/xml/nfc_tech_filter.xml
@@ -1,5 +1,5 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
-    <tech-list>
+    <!--<tech-list>
         <tech>android.nfc.tech.NfcA</tech>
     </tech-list>
     <tech-list>
@@ -13,20 +13,20 @@
     </tech-list>
     <tech-list>
         <tech>android.nfc.tech.NfcV</tech>
-    </tech-list>
-    <tech-list>
-        <tech>android.nfc.tech.IsoDep</tech>
-    </tech-list>
-    <tech-list>
-        <tech>android.nfc.tech.MifareClassic</tech>
-    </tech-list>
-    <tech-list>
-        <tech>android.nfc.tech.MifareUltralight</tech>
-    </tech-list>
-    <tech-list>
-        <tech>android.nfc.tech.Ndef</tech>
-    </tech-list>
-    <tech-list>
-        <tech>android.nfc.tech.NdefFormatable</tech>
-    </tech-list>
+    </tech-list>-->
+<tech-list>
+    <tech>android.nfc.tech.IsoDep</tech>
+</tech-list>
+<!--<tech-list>
+    <tech>android.nfc.tech.MifareClassic</tech>
+</tech-list>
+<tech-list>
+    <tech>android.nfc.tech.MifareUltralight</tech>
+</tech-list>
+<tech-list>
+    <tech>android.nfc.tech.Ndef</tech>
+</tech-list>
+<tech-list>
+    <tech>android.nfc.tech.NdefFormatable</tech>
+</tech-list> -->
 </resources>
